services/qr-code-handler/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qr-code-handler
  name: qr-code-handler
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: qr-code-handler
